--- a/ConfigServiceAPI/docker-swarm.yml
+++ b/ConfigServiceAPI/docker-swarm.yml
@@ -11,7 +11,6 @@ secrets:
 services:
   postgres-db:
     image: postgres:16
-    container_name: config_db
     restart: always
     deploy:
       replicas: 1
@@ -19,6 +18,8 @@ services:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD_FILE: /run/secrets/db_user_passwd
+      PUID: 999
+      PGID: 999
     ports:
       - "${DB_PORT}:5432"
     volumes:
@@ -42,12 +43,14 @@ services:
       - "${API_PORT}:80"
     environment:
       ASPNETCORE_URLS: http://+:80
-      CFGSVCAPI_DEBUG: 'false'
-      BASIC_AUTH_USER_FILE: /run/secrets/basic_auth_user
-      BASIC_AUTH_PASS_FILE: /run/secrets/basic_auth_pass
+      DB_HOST: postgres-db
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+
     secrets:
       - basic_auth_user
       - basic_auth_pass
+      - db_user_passwd
     networks:
       - cfgsycapi_net
 
@@ -57,7 +60,7 @@ volumes:
     driver_opts:
       type: nfs
       o: addr=nfssrv01,rw
-      device: ":/data/docker-vols/group07/postgres_data"
+      device: ":/data/docker-vols/grupo07/postgres_data"
 
 networks:
   cfgsycapi_net:
