--- a/ConfigServiceAPI/docker-compose.yaml
+++ b/ConfigServiceAPI/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
   api:
     build: .
     container_name: config_api
+    user: "${APP_UID:-1000}"
     ports:
       - "${API_PORT}:80"
     depends_on:
